update color picker

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="vendor/css/kendo.material.mobile.min.css"/>
     <link rel="stylesheet" type="text/css" href="vendor/css/bootstrap-colorpicker.min.css">
     <link rel="stylesheet" type="text/css" href="css/dialogs.css">
+    <link rel="stylesheet" type="text/css" href="css/color-picker.css">
 
     <link rel="stylesheet" href="css/sprite_16.css">
     <link rel="stylesheet" href="css/sprite_32.css">
