--- a/source/dialogs/color-picker/color-picker-modal.html
+++ b/source/dialogs/color-picker/color-picker-modal.html
@@ -1,40 +1,88 @@
-<div class="modal" data-backdrop="static" data-keyboard="false">
-	    <div class="modal-dialog modal-sm chooseColor">
-	        <div class="modal-content">
-	            <div class="modal-body">
-	            	<h5>Color picker</h5>
-					<input type="hidden" class="form-control" id="cp" />
-					<div id="demo"></div>
-					<div class="container-fluid padding-top-2em">
-						<div class="row">
-							<form action="" ng-submit="wiModal.updateColor();">
-								<div class="col-sm-3 padding-0 text-center">
-									<input type="number" class='color-comp text-center' min="0" max="255" name="R" ng-model="wiModal.color.r">
-								</div>
-								<div class="col-sm-3 padding-0 text-center">
-									<input type="number" class='color-comp text-center' min="0" max="255" name="G" ng-model="wiModal.color.g">
-								</div>
-								<div class="col-sm-3 padding-0 text-center">
-									<input type="number" class='color-comp text-center' min="0" max="255" name="B" ng-model="wiModal.color.b">
-								</div>
-								<div class="col-sm-3 padding-0 text-center">
-									<input type="number" class='color-comp text-center' step="0.00001" name="A" ng-model="wiModal.color.a">
-								</div>
-								<input type="submit" style="position: absolute; left: -9999px">
-							</form>
-						</div>
-						<div class="row">
-							<div class="col-sm-3 text-center">R</div>
-							<div class="col-sm-3 text-center">G</div>
-							<div class="col-sm-3 text-center">B</div>
-							<div class="col-sm-3 text-center">A</div>
-						</div>
-					</div>
-	            </div>
-	            <div class="modal-footer">
-	            	<button class='btn btn-default' ng-click='wiModal.onOkButtonClicked()'><span class="ok-16x16"></span>&nbsp;Ok</button>
-					<button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'><span class="cancel-16x16"></span>&nbsp;Cancel</button>
-	            </div>
-	        </div>
-	    </div>
-	</div>
+<div class="modal fade" id="myModal">
+  <div class="modal-dialog modal-700px">
+    <div class="modal-content">
+      <!-- Modal header -->
+      <div class="modal-header">
+        <button type="button" class='close' ng-click="wiModal.close('Canceled')">&times;</button>
+        <h4 class="modal-title">Color Picker</h4>
+      </div>
+      <!-- Modal body -->
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-xs-12 col-md-12">
+            <div class="col-xs-6">
+              <label class="control-label">Basic Colors</label>
+              <div class="container-fluid">
+                <div ng-repeat="row in wiModal.CpSelector" class="row">
+                  <div ng-repeat="col in row" class="col-sm-1_5">
+                    <div class="box" ng-style="{'background-color': wiModal.toString(col.color)}" ng-click="wiModal.currentColor = col.color; wiModal.updateColor()"></div>
+                  </div>
+                </div>
+              </div>
+              <label class="control-label">Custom Colors</label>
+              <div id="cpCustom" class="container-fluid">
+                <div class="row">
+                  <div ng-repeat="col in wiModal.CpCustoms track by col.id" class="col-sm-1_5">
+                    <div tabindex="-1" class="box" ng-style="{'background-color' : wiModal.toString(col.color), 'border': wiModal.BoxBorder(col.id)}"
+                      ng-click="wiModal.handleFocus(col); wiModal.currentColor = col.color; wiModal.updateColor()"></div>
+                  </div>
+                </div>
+
+              </div>
+              <!-- End of color selector -->
+            </div>
+            <!-- End of color selector -->
+            <div class="col-xs-6">
+              <input type='hidden' id='cp'>
+              <label for="" class="control-label">Define Custom Colors</label>
+              <div id='cp-container'></div>
+              <div class="container-fluid">
+                <button style="margin: 10px auto 0px auto;" ng-click="wiModal.addToCustom()" class="btn btn-success col-sm-12">
+                  <span class="fa fa-lg fa-arrow-circle-left"></span> Add to custom
+                </button>
+              </div>
+            </div>
+            <!-- End of color picker container -->
+          </div>
+          <div class="col-xs-12 col-md-12">
+            <form ng-submit="wiModal.updateColor();">
+              <div id="RGB-Model" class="row">
+                <div class="col-xs-3">
+                  <div id="RGB-red" class="input-group">
+                    <label for="red" class="input-group-addon">Red</label>
+                    <input type="number" min="0" max="255" id="red" class="form-control" ng-model='wiModal.currentColor.r'>
+                  </div>
+                </div>
+                <div class="col-xs-3">
+                  <div id="RGB-green" class="input-group">
+                    <label for="green" class="input-group-addon">Green</label>
+                    <input type="number" min="0" max="255" id="green" class="form-control" ng-model='wiModal.currentColor.g'>
+                  </div>
+                </div>
+                <div class="col-xs-3">
+                  <div id="RGB-blue" class="input-group">
+                    <label for="blue" class="input-group-addon">Blue</label>
+                    <input type="number" min="0" max="255" id="blue" class="form-control" ng-model='wiModal.currentColor.b'>
+                  </div>
+                </div>
+                <div class="col-xs-3">
+                  <div id="RGB-alpha" class="input-group">
+                    <label for="alpha" class="input-group-addon">Alpha</label>
+                    <input type="number" min="0" max="1" step="0.01" id="alpha" class="form-control" ng-model='wiModal.currentColor.a'>
+                  </div>
+                </div>
+              </div>
+              <button class="btn btn-default" style="display: none;" ng-click='wiModal.updateColor();'>Click</button>
+            </form>
+          </div>
+          <!-- End of RGB format -->
+        </div>
+      </div>
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button class='btn btn-default' ng-click='wiModal.onOkButtonClicked()'><span class="ok-16x16"></span>&nbsp;Ok</button>
+        <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'><span class="cancel-16x16"></span>&nbsp;Cancel</button>
+      </div>
+    </div>
+  </div>
+</div>
