--- a/source/dialogs/fill-pattern-setting/fill-pattern-setting-modal.html
+++ b/source/dialogs/fill-pattern-setting/fill-pattern-setting-modal.html
@@ -39,9 +39,6 @@
                             <div class="form-group">
                                 <label class="control-label col-sm-6 small-text">Foreground</label>
                                 <div class="col-sm-6 text-left">
-                                    <!-- <input kendo-color-picker k-palette="'websafe'"
-                                           class="form-control wi-form-control"
-                                           ng-model="wiModal.options.fill.foreground"/> -->
                                     <div class="addon valign-middle" 
                                         ng-style="{'background-color':wiModal.options.fill.foreground}"><img/></div>
                                     <button ng-click="wiModal.foreground()"
@@ -53,9 +50,6 @@
                             <div class="form-group">
                                 <label class="control-label col-sm-6 small-text" for="background">Background</label>
                                 <div class="col-sm-6 text-left">
-                                    <!-- <input kendo-color-picker k-palette="'websafe'"
-                                           class="form-control wi-form-control"
-                                           ng-model="wiModal.options.fill.background"/> -->
                                     <div class="addon valign-middle" ng-style="{'background-color':wiModal.options.fill.background}"><img/></div>
                                     <button ng-click="wiModal.background()"
                                             class="form-control wi-form-control width-80px">Change</button>
@@ -69,8 +63,8 @@
                                 <label class="normal-text">
                                     <input type="checkbox" id="displayFill"
                                            value="" name=""
-                                           ng-model="wiModal.options.fill.isFill" 
-                                           ng-change="wiModal.enableFill('positiveNegative', wiModal.options.fill.isFill);">
+                                           ng-model="wiModal.options.fill.display" 
+                                           ng-change="wiModal.enableFill('positiveNegative', wiModal.options.fill.display);">
                                     Positive/Negative Fill
                                 </label>
                             </div>
@@ -85,8 +79,8 @@
                                         <label class="normal-text">
                                             <input type="checkbox" id="noPositiveFill"
                                                    value="" name=""
-                                                   ng-model="wiModal.options.positiveFill.isFill"
-                                                   ng-change="wiModal.enableFill('positiveFill', wiModal.options.positiveFill.isFill);">
+                                                   ng-model="wiModal.options.positiveFill.display"
+                                                   ng-change="wiModal.enableFill('positiveFill', wiModal.options.positiveFill.display);">
                                             No Positive fill
                                         </label>
                                     </div>
@@ -96,7 +90,7 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-sm-4">Positive pattern</label>
                                                     <div class="col-sm-8">
-                                                        <ui-select theme="bootstrap" ng-model="wiModal.options.positiveFill.pattern" ng-disabled="wiModal.options.positiveFill.isFill || wiModal.options.fill.isFill">
+                                                        <ui-select theme="bootstrap" ng-model="wiModal.options.positiveFill.pattern" ng-disabled="wiModal.options.positiveFill.display || wiModal.options.fill.display">
                                                             <ui-select-match>
                                                                 <wi-canvas-rect name="_selectedPatternCanvasPositive" 
                                                                                 pattern="{{wiModal.options.positiveFill.pattern}}" 
@@ -120,9 +114,6 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-sm-6 small-text" >Positive Foreground</label>
                                                     <div class="col-sm-6 text-left">
-                                                        <!-- <input kendo-color-picker k-palette="'websafe'"
-                                                               class="form-control wi-form-control"
-                                                               ng-model="wiModal.options.positiveFill.foreground"/> -->
                                                         <div class="addon valign-middle" 
                                                             ng-style="{'background-color':wiModal.options.positiveFill.foreground}"><img/></div>
                                                         <button ng-click="wiModal.posPositiveForeground()"
@@ -134,9 +125,6 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-sm-6 small-text">Positive Background</label>
                                                     <div class="col-sm-6 text-left">
-                                                        <!-- <input kendo-color-picker k-palette="'websafe'"
-                                                               class="form-control wi-form-control"
-                                                               ng-model="wiModal.options.positiveFill.background"/> -->
                                                         <div class="addon valign-middle" 
                                                             ng-style="{'background-color':wiModal.options.positiveFill.background}"><img/></div>
                                                         <button ng-click="wiModal.posPositiveBackground()"
@@ -152,8 +140,8 @@
                                         <label for="noNegativeFill" class="normal-text">
                                             <input type="checkbox" id="noNegativeFill"
                                                    value="" name=""
-                                                   ng-model="wiModal.options.negativeFill.isFill"
-                                                   ng-change="wiModal.enableFill('negativeFill', wiModal.options.negativeFill.isFill);">
+                                                   ng-model="wiModal.options.negativeFill.display"
+                                                   ng-change="wiModal.enableFill('negativeFill', wiModal.options.negativeFill.display);">
                                             No Negative fill
                                         </label>
                                     </div>
@@ -163,7 +151,7 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-sm-4">Negative pattern</label>
                                                     <div class="col-sm-8">
-                                                        <ui-select theme="bootstrap" ng-model="wiModal.options.negativeFill.pattern" ng-disabled="wiModal.options.negativeFill.isFill || wiModal.options.fill.isFill">
+                                                        <ui-select theme="bootstrap" ng-model="wiModal.options.negativeFill.pattern" ng-disabled="wiModal.options.negativeFill.display || wiModal.options.fill.display">
                                                             <ui-select-match>
                                                                 <wi-canvas-rect name="_selectedPatternCanvasNegative" 
                                                                                 pattern="{{wiModal.options.negativeFill.pattern}}" 
@@ -187,9 +175,6 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-sm-6 small-text" >Positive Foreground</label>
                                                     <div class="col-sm-6 text-left">
-                                                        <!-- <input kendo-color-picker k-palette="'websafe'"
-                                                               class="form-control wi-form-control"
-                                                               ng-model="wiModal.options.negativeFill.foreground"/> -->
                                                         <div class="addon valign-middle" 
                                                             ng-style="{'background-color':wiModal.options.negativeFill.foreground}"><img/></div>
                                                         <button ng-click="wiModal.negPositiveForeground()"
@@ -203,9 +188,6 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-sm-6 small-text">Positive Background</label>
                                                     <div class="col-sm-6 text-left">
-                                                        <!-- <input kendo-color-picker k-palette="'websafe'"
-                                                               class="form-control wi-form-control"
-                                                               ng-model="wiModal.options.negativeFill.background"/> -->
                                                         <div class="addon valign-middle" 
                                                             ng-style="{'background-color':wiModal.options.negativeFill.background}"><img/></div>
                                                         <button ng-click="wiModal.negPositiveBackground()"
