--- a/source/dialogs/variable-shading/variable-shading-modal.html
+++ b/source/dialogs/variable-shading/variable-shading-modal.html
@@ -67,7 +67,7 @@
                                             class="form-control wi-form-control width-80px">Change</button>
                         </div>
                     </div>
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="col-sm-4">
                             <label class="small-text">
                                 <input type="radio" ng-value="palette">
@@ -93,7 +93,7 @@
                     </div>
                     <div class="row">
                         
-                    </div>
+                    </div> -->
                 </form>                   
             </div>
             <div class="modal-footer">
