--- a/source/dialogs/fill-pattern-setting/fill-pattern-setting-modal.html
+++ b/source/dialogs/fill-pattern-setting/fill-pattern-setting-modal.html
@@ -15,20 +15,21 @@
                             <div class="form-group">
                                 <label class="control-label col-sm-4">Fill pattern</label>
                                 <div class="col-sm-8">
-                                    <ui-select theme="bootstrap" ng-model="wiModal.options.fill.pattern">
+                                    <ui-select theme="bootstrap" ng-model="wiModal.options.fill.pattern.name"
+                                                ng-disabled="!wiModal.options.fill.display">
                                         <ui-select-match>
                                             <wi-canvas-rect name="_selectedPatternCanvas" 
-                                                            pattern="{{wiModal.options.fill.pattern}}" 
+                                                            pattern="{{wiModal.options.fill.pattern.name}}" 
                                                             width="300" height="20" 
-                                                            foreground="{{wiModal.options.fill.foreground}}" 
-                                                            background='{{wiModal.options.fill.background}}'>
+                                                            foreground="{{wiModal.options.fill.pattern.foreground}}" 
+                                                            background='{{wiModal.options.fill.pattern.background}}'>
                                             </wi-canvas-rect>
                                         </ui-select-match>
                                         <ui-select-choices repeat="selectedPattern in wiModal.selectPatterns">
                                             <wi-canvas-rect name="{{selectedPattern}}" pattern="{{selectedPattern}}" 
                                                             width="300" height="20" 
-                                                            foreground="{{wiModal.options.fill.foreground}}" 
-                                                            background='{{wiModal.options.fill.background}}'>
+                                                            foreground="{{wiModal.options.fill.pattern.foreground}}" 
+                                                            background='{{wiModal.options.fill.pattern.background}}'>
                                             </wi-canvas-rect>
                                         </ui-select-choices>
                                     </ui-select>
@@ -39,9 +40,7 @@
                             <div class="form-group">
                                 <label class="control-label col-sm-6 small-text">Foreground</label>
                                 <div class="col-sm-6 text-left">
-                                    <div class="addon valign-middle" 
-                                        ng-style="{'background-color':wiModal.options.fill.foreground}"><img/></div>
-                                    <button ng-click="wiModal.foreground()"
+                                    <button ng-style="{'background-color':wiModal.options.fill.pattern.foreground}" ng-click="wiModal.foreground()"
                                             class="form-control wi-form-control width-80px">Change</button>
                                 </div>
                             </div>
@@ -50,8 +49,7 @@
                             <div class="form-group">
                                 <label class="control-label col-sm-6 small-text" for="background">Background</label>
                                 <div class="col-sm-6 text-left">
-                                    <div class="addon valign-middle" ng-style="{'background-color':wiModal.options.fill.background}"><img/></div>
-                                    <button ng-click="wiModal.background()"
+                                    <button ng-style="{'background-color':wiModal.options.fill.pattern.background}" ng-click="wiModal.background()"
                                             class="form-control wi-form-control width-80px">Change</button>
                                 </div>
                             </div>
@@ -64,8 +62,8 @@
                                     <input type="checkbox" id="displayFill"
                                            value="" name=""
                                            ng-model="wiModal.options.fill.display" 
-                                           ng-change="wiModal.enableFill('positiveNegative', wiModal.options.fill.display);">
-                                    Positive/Negative Fill
+                                           ng-change="wiModal.correctFillingStyle()">
+                                    No Positive/Negative Fill
                                 </label>
                             </div>
                         </div>
@@ -73,15 +71,15 @@
                     <div class="row">
                         <div id="positiveNegative">
                             <div class="container-fluid">
-                                <h5>Positive/Negative Fill</h5>
+                                <h5>Positive/Negative Fill Settings</h5>
                                 <div class="col-sm-12">
                                     <div class="form-group">
                                         <label class="normal-text">
-                                            <input type="checkbox" id="noPositiveFill"
+                                            <input type="checkbox" id="PositiveFill"
                                                    value="" name=""
                                                    ng-model="wiModal.options.positiveFill.display"
-                                                   ng-change="wiModal.enableFill('positiveFill', wiModal.options.positiveFill.display);">
-                                            No Positive fill
+                                                   ng-change="">
+                                            Positive fill
                                         </label>
                                     </div>
                                     <div class="row">
@@ -90,20 +88,20 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-sm-4">Positive pattern</label>
                                                     <div class="col-sm-8">
-                                                        <ui-select theme="bootstrap" ng-model="wiModal.options.positiveFill.pattern" ng-disabled="wiModal.options.positiveFill.display || wiModal.options.fill.display">
+                                                        <ui-select theme="bootstrap" ng-model="wiModal.options.positiveFill.pattern.name" ng-disabled="wiModal.options.fill.display">
                                                             <ui-select-match>
                                                                 <wi-canvas-rect name="_selectedPatternCanvasPositive" 
-                                                                                pattern="{{wiModal.options.positiveFill.pattern}}" 
+                                                                                pattern="{{wiModal.options.positiveFill.pattern.name}}" 
                                                                                 width="270" height="20" 
-                                                                                foreground="{{wiModal.options.positiveFill.foreground}}" 
-                                                                                background='{{wiModal.options.positiveFill.background}}'>
+                                                                                foreground="{{wiModal.options.positiveFill.pattern.foreground}}" 
+                                                                                background='{{wiModal.options.positiveFill.pattern.background}}'>
                                                                 </wi-canvas-rect>
                                                             </ui-select-match>
                                                             <ui-select-choices repeat="selectedPattern in wiModal.selectPatterns">
                                                                 <wi-canvas-rect name="{{selectedPattern}}" pattern="{{selectedPattern}}" 
                                                                                 width="270" height="20" 
-                                                                                foreground="{{wiModal.options.positiveFill.foreground}}" 
-                                                                                background='{{wiModal.options.positiveFill.background}}'>
+                                                                                foreground="{{wiModal.options.positiveFill.pattern.foreground}}" 
+                                                                                background='{{wiModal.options.positiveFill.pattern.background}}'>
                                                                 </wi-canvas-rect>
                                                             </ui-select-choices>
                                                         </ui-select>
@@ -114,9 +112,7 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-sm-6 small-text" >Positive Foreground</label>
                                                     <div class="col-sm-6 text-left">
-                                                        <div class="addon valign-middle" 
-                                                            ng-style="{'background-color':wiModal.options.positiveFill.foreground}"><img/></div>
-                                                        <button ng-click="wiModal.posPositiveForeground()"
+                                                        <button ng-click="wiModal.posPositiveForeground()" ng-style="{'background-color':wiModal.options.positiveFill.pattern.foreground}"
                                                                 class="form-control wi-form-control width-80px">Change</button>
                                                     </div>
                                                 </div>
@@ -125,9 +121,7 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-sm-6 small-text">Positive Background</label>
                                                     <div class="col-sm-6 text-left">
-                                                        <div class="addon valign-middle" 
-                                                            ng-style="{'background-color':wiModal.options.positiveFill.background}"><img/></div>
-                                                        <button ng-click="wiModal.posPositiveBackground()"
+                                                        <button ng-click="wiModal.posPositiveBackground()" ng-style="{'background-color':wiModal.options.positiveFill.pattern.background}" 
                                                                 class="form-control wi-form-control width-80px">Change</button>
                                                     </div>
                                                 </div>
@@ -137,12 +131,12 @@
                                 </div>
                                 <div class="col-sm-12">
                                     <div class="form-group">
-                                        <label for="noNegativeFill" class="normal-text">
-                                            <input type="checkbox" id="noNegativeFill"
+                                        <label for="NegativeFill" class="normal-text">
+                                            <input type="checkbox" id="NegativeFill"
                                                    value="" name=""
                                                    ng-model="wiModal.options.negativeFill.display"
-                                                   ng-change="wiModal.enableFill('negativeFill', wiModal.options.negativeFill.display);">
-                                            No Negative fill
+                                                   >
+                                            Negative fill
                                         </label>
                                     </div>
                                     <div class="row">
@@ -151,20 +145,20 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-sm-4">Negative pattern</label>
                                                     <div class="col-sm-8">
-                                                        <ui-select theme="bootstrap" ng-model="wiModal.options.negativeFill.pattern" ng-disabled="wiModal.options.negativeFill.display || wiModal.options.fill.display">
+                                                        <ui-select theme="bootstrap" ng-model="wiModal.options.negativeFill.pattern.name" ng-disabled="wiModal.options.fill.display">
                                                             <ui-select-match>
                                                                 <wi-canvas-rect name="_selectedPatternCanvasNegative" 
-                                                                                pattern="{{wiModal.options.negativeFill.pattern}}" 
+                                                                                pattern="{{wiModal.options.negativeFill.pattern.name}}" 
                                                                                 width="270" height="20" 
-                                                                                foreground="{{wiModal.options.negativeFill.foreground}}" 
-                                                                                background='{{wiModal.options.negativeFill.background}}'>
+                                                                                foreground="{{wiModal.options.negativeFill.pattern.foreground}}" 
+                                                                                background='{{wiModal.options.negativeFill.pattern.background}}'>
                                                                 </wi-canvas-rect>
                                                             </ui-select-match>
                                                             <ui-select-choices repeat="selectedPattern in wiModal.selectPatterns">
                                                                 <wi-canvas-rect name="{{selectedPattern}}" pattern="{{selectedPattern}}" 
                                                                                 width="270" height="20" 
-                                                                                foreground="{{wiModal.options.negativeFill.foreground}}" 
-                                                                                background='{{wiModal.options.negativeFill.background}}'>
+                                                                                foreground="{{wiModal.options.negativeFill.pattern.foreground}}" 
+                                                                                background='{{wiModal.options.negativeFill.pattern.background}}'>
                                                                 </wi-canvas-rect>
                                                             </ui-select-choices>
                                                         </ui-select>
@@ -175,9 +169,7 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-sm-6 small-text" >Positive Foreground</label>
                                                     <div class="col-sm-6 text-left">
-                                                        <div class="addon valign-middle" 
-                                                            ng-style="{'background-color':wiModal.options.negativeFill.foreground}"><img/></div>
-                                                        <button ng-click="wiModal.negPositiveForeground()"
+                                                        <button ng-click="wiModal.negPositiveForeground()" ng-style="{'background-color':wiModal.options.negativeFill.pattern.foreground}" 
                                                                 class="form-control wi-form-control width-80px">
                                                                 Change
                                                         </button>
@@ -188,9 +180,7 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-sm-6 small-text">Positive Background</label>
                                                     <div class="col-sm-6 text-left">
-                                                        <div class="addon valign-middle" 
-                                                            ng-style="{'background-color':wiModal.options.negativeFill.background}"><img/></div>
-                                                        <button ng-click="wiModal.negPositiveBackground()"
+                                                        <button ng-click="wiModal.negPositiveBackground()" ng-style="{'background-color':wiModal.options.negativeFill.pattern.background}" 
                                                                 class="form-control wi-form-control width-80px">
                                                                 Change
                                                         </button>
